--- a/app/src/main/res/layout/activity_request_civilian.xml
+++ b/app/src/main/res/layout/activity_request_civilian.xml
@@ -2,46 +2,64 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/always"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RequestCivilianActivity">
 
     <Button
-        android:id="@+id/SearchButton"
-        android:layout_width="188dp"
-        android:layout_height="78dp"
-        android:text="Search a Request"
-        android:background="@drawable/imagesnew"
+        android:id="@+id/baaack"
+        android:layout_width="88dp"
+        android:layout_height="38dp"
+        android:background="@drawable/roundedbutton"
+        android:text="Back"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.364" />
+        app:layout_constraintVertical_bias="0.634" />
 
     <Button
         android:id="@+id/CreateButton"
-        android:layout_width="184dp"
-        android:layout_height="71dp"
+        android:layout_width="218dp"
+        android:layout_height="41dp"
+        android:background="@drawable/roundedbutton"
         android:text="Create a Request"
-        android:background="@drawable/imagesnew"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.594" />
+        app:layout_constraintVertical_bias="0.516" />
 
     <Button
-        android:id="@+id/baaack"
-        android:layout_width="101dp"
-        android:layout_height="47dp"
-        android:text="Back"
+        android:id="@+id/SearchButton"
+        android:layout_width="218dp"
+        android:layout_height="43dp"
+        android:background="@drawable/roundedbutton"
+        android:text="Search a Request"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.975" />
+        app:layout_constraintVertical_bias="0.395" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Requests"
+        android:textColor="#000000"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.232" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
